--- a/public/scss/_header.scss
+++ b/public/scss/_header.scss
@@ -7,10 +7,13 @@
     .logo {
       padding: 4rem 0;
       z-index: 3;
+      img {
+        width: 13em;
+      }
     }
 
     .account {
-      padding: 4rem 0;
+      padding: 7rem 0 0 0;
       z-index: 3;
       .shopping {
         border-left: 1px solid $red-dark-default;
@@ -61,11 +64,11 @@
           left: 15%;
           right: 15%;
           h2 {
-            color: rgb(111, 111, 111);
+            color: $white-default;
             font-weight: bold;
           }
           p {
-            color: rgb(47, 47, 47);
+            color: $white-default;
             font-size: 1.5em;
             padding: 1em 0;
           }
