--- a/public/scss/application.scss
+++ b/public/scss/application.scss
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
 @import "./_vars.scss";
 @import "./_default.scss";
 @import "./header.scss";
 @import "./footer.scss";
+@import "./_products.scss";
