--- a/public/scss/_default.scss
+++ b/public/scss/_default.scss
@@ -29,6 +29,10 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase !important;
 }
 
+.block {
+  display: block;
+}
+
 .title {
     font-size: 1.5em;
     &.bold {
