--- a/public/scss/_default.scss
+++ b/public/scss/_default.scss
@@ -35,7 +35,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .title {
     font-size: 1.5em;
-    &.bold {
-      font-weight: bold;
-    }
+}
+
+.bold {
+  font-weight: bold;
 }
