--- a/public/scss/application.scss
+++ b/public/scss/application.scss
@@ -1,6 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700');
 @import "./_vars.scss";
 @import "./_default.scss";
 @import "./header.scss";
 @import "./footer.scss";
 @import "./_products.scss";
+@import "./_line.scss";
+@import "./_steps";
