--- a/public/scss/_default.scss
+++ b/public/scss/_default.scss
@@ -25,6 +25,23 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.btn-red-dark-default {
+  background-color: $red-dark-default;
+  color: $white-default;
+  &:hover, &:active {
+    background-color: $red-default;
+    color: $white-default;
+    transition: .3s all;
+  }
+}
+
+.form-control {
+  &:focus, &:active, &:hover {
+    box-shadow: none;
+    border-color: $red-dark-default;
+  }
+}
+
 .upper {
   text-transform: uppercase !important;
 }
@@ -35,6 +52,11 @@ h1, h2, h3, h4, h5, h6 {
 
 .title {
     font-size: 1.5em;
+}
+
+.subtitle {
+  padding: 0 0 1em 0;
+  display: block;
 }
 
 .bold {
